@@ -3,8 +3,9 @@ New in master
 
 Features
 --------
-* Update options of chart directive to Pygal 2.2.3
 
+* New NO_DOCUTILS_TITLE_TRANSFORM (Issue #2382)
+* Update options of chart directive to Pygal 2.2.3
 
 New in v7.7.12
 ==============
